# eventRSVP

./: .gitignore  README.md  docker-compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/core/: config.py  database.py  limiter.py  logger.py
backend/graphql_api/: context.py  mutation.py  query.py  types.py
backend/middleware/: auth_middleware.py
backend/models/: base_model.py  event_model.py  refresh_token_model.py  rsvp_model.py  ticket_model.py  user_model.py
backend/permissions/: auth_permissions.py
backend/repository/: event_repository.py  refresh_token_repository.py  rsvp_repository.py  ticket_repository.py  user_repository.py
backend/schemas/: event_schema.py  rsvp_schema.py  ticket_schema.py  user_schema.py
backend/services/: auth_service.py  email_service.py  event_service.py  qr_service.py  rsvp_service.py
backend/templates/emails/: account_created.html  account_deleted.html  account_updated.html  account_verified.html  email_otp.html  event_reminder.html  forgot_password.html  password_reset_success.html  rsvp_confirmation.html
backend/tests/: test_services.py
